src/test/deca/context/valid/class_public.deca

class A {
    public int x = 1;
}

{

}