src/test/deca/context/invalid/bool_from_int.deca

// Description :
// Initialisation boolean avec int

// Resultats :
// Erreur contextuelle


{
  boolean b = 1;
}